<resources>
    <string name="app_name">PedidoFacil</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_facebook">Entrar com Facebook</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_register">Registrar</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Senha inválida</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_incorrect_login">Usuário ou Senha incorretos</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Permissões de contatos são obrigatórias para preenchimento automático"</string>
    <string name="facebook_app_id">495046197332841</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="Next">Next</string>
    <string name="title_activity_sub">SubActivity</string>

    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
